# GroupProject-FringeProjectionSystem

./: .gitignore  README.md  calibrate_intrinsics_extrinsics.py  calibrate_structured_light.py  calibration_report.txt  camera_intrinsics.npz  main.py  patterns.py  projector.py  projector_intrinsics.npz  projector_intrinsics_graycode.npz  pyproject.toml  scan.py  server.py  stereo_params.npz  stereo_params_graycode.npz  test_reprojection_error.py  unwrap.py  white.py
2.modular-code-lastworking/: server.py
3.code-with-calibration/: main.py
calibration/: __init__.py  build_graycode_dataset.py  build_projector_dataset.py  build_projector_dataset_psp.py  calibrate_projector_graycode.py  camera_calibration.py  checkerboard.py  graycode.py  masking_calib.py  projector_calibration.py  projector_checkerboard.py  projector_intrinsics.py  psp_calib.py  selfcheck.py  test_graycode_reprojection_error.py  triangulate.py
config/: default.yaml  default_clean.yaml  uv_convention.json
core/: camera.py  geometry.py  graycode.py  masking.py  patterns.py  projector.py  psp.py  scan.py  triangulation.py  unwrap.py
fringe_app_v2/: __init__.py  __main__.py  app.py
fringe_web_test1/: fringe_web.py
fringe_web_test2/: camera.py  patterns.py  psp.py  scan.py
hdmicameratest/: fullscreen_kms_test.py  test.py
patterns_graycode/: graycode_generator.py
templates/: calib.html  index.html  message.html  proj_calib.html
tools/: check_resolution_consistency.py  diagnose_recon_reproj_spaces.py  diagnose_undistortion.py  low_white_fullscreen.py  mock_scan_selftest.py  plane_fit.py  (+1 more)
(+465 files in other folders)
