[project]
name = "fringe_app"
version = "0.1.0"
description = "Minimal fringe projection capture system"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Fringe App"}]

dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.29",
  "numpy>=1.24",
  "pygame>=2.5",
  "pyyaml>=6.0",
  "pillow>=10.0",
]

[project.scripts]
fringe-app = "fringe_app.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"

